--- a/XamarindotNETExample/XamarindotNETExample/XamarindotNETExample.csproj
+++ b/XamarindotNETExample/XamarindotNETExample/XamarindotNETExample.csproj
@@ -14,4 +14,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
     <PackageReference Include="sqlite-net-pcl" Version="1.6.292" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\" />
+  </ItemGroup>
 </Project>
